[package]
name = "julia-set"    # Название программы
version = "0.1.0"     # Версия программы

build = "build.rs"    # Скрипт для сборки rust
links = "cudart"      # Библиотека cuda_dot, которая линкуется динамически

[dependencies]
libc = "0.2.142"      # Библиотека rust для работы С кодом
rand = "0.8.5"        # Библиотека rust для работы с случайными величинами

[build-dependencies]
cc = "1.0.79"         # Rust пакет для сборки С кода