[package]
name = "julia"
version = "0.1.0"

build = "build.rs"
links = "cudart"

[lib]
name = "julia"
path = "src/lib.rs"

[dependencies]
# Библиотека rust для работы С кодом
libc = "0.2.153"
# Крейт для работы с изображениями
image = "0.24.9"

[build-dependencies]
# Rust пакет для сборки С кода
cc = "1.0.89"
